@@ -18,6 +18,7 @@
 
 #include <gtk/gtk.h>
 #include <glib/gi18n.h>
+#include <gst/gst.h>
 
 #include <unistd.h>
 #include <string.h>
@@ -33,158 +34,181 @@
 #include "channel.h"
 #include "sitelist.h"
 
+static GstPlayer* gstPlayer = NULL;
 static const char* current = NULL;
 static gboolean g_bRadioStatus = FALSE;
+static int myGstCallback(GstPlayer*, GstStatus);
 
 typedef struct {
-	GtkWidget *m_pIcon;
-	gchar *m_pcRadioOn;
-	gchar *m_pcRadioOff;
+    GtkWidget *m_pIcon;
+    gchar *m_pcRadioOn;
+    gchar *m_pcRadioOff;
 } radio_icon_t;
 
 gboolean updateRadioStatus(gpointer user_data)
 {
-	static gboolean s_bFlash = TRUE;
-	radio_icon_t *t_pRadioIcon = (radio_icon_t*) user_data;
+    static gboolean s_bFlash = TRUE;
+    radio_icon_t *t_pRadioIcon = (radio_icon_t*) user_data;
 
-	if (g_bRadioStatus == TRUE && s_bFlash == TRUE) {
-		gtk_image_set_from_file(GTK_IMAGE(t_pRadioIcon->m_pIcon), t_pRadioIcon->m_pcRadioOn);
-	} else {
-		gtk_image_set_from_file(GTK_IMAGE(t_pRadioIcon->m_pIcon), t_pRadioIcon->m_pcRadioOff);
-	}
+    if (g_bRadioStatus == TRUE && s_bFlash == TRUE) {
+        gtk_image_set_from_file(GTK_IMAGE(t_pRadioIcon->m_pIcon), t_pRadioIcon->m_pcRadioOn);
+    } else {
+        gtk_image_set_from_file(GTK_IMAGE(t_pRadioIcon->m_pIcon), t_pRadioIcon->m_pcRadioOff);
+    }
 
-	s_bFlash = s_bFlash == TRUE ? FALSE : TRUE;
+    s_bFlash = s_bFlash == TRUE ? FALSE : TRUE;
 
-	return TRUE;
+    return TRUE;
 }
 
 void onQuit(GtkWidget* item, gpointer user_data)
 {
-	g_bRadioStatus = FALSE;
-	gstStop();
-	gtk_main_quit();
+    g_bRadioStatus = FALSE;
+    gstPlayer->Release(gstPlayer);
+    gtk_main_quit();
 }
 
 void onStop(GtkWidget* item, gpointer user_data)
 {
     if (GTK_CHECK_MENU_ITEM(item)->active) {
-		g_bRadioStatus = FALSE;
-		gstStop();
-		current = NULL;
-	}
+        gstPlayer->Stop(gstPlayer);
+        g_bRadioStatus = FALSE;
+        current = NULL;
+    }
+}
+
+static int myGstCallback(GstPlayer* gst, GstStatus state)
+{
+    switch (state)
+    {
+        default:
+        case GstNull:
+        case GstPlay:
+            break;
+        case GstError:
+            gst->Stop(gst);
+            g_bRadioStatus = FALSE;
+            current = NULL;
+            return 1;
+    }
+
+    return 0;
 }
 
 gpointer onPlay(gpointer *data)
 {
-		gchar* id = g_object_get_data(G_OBJECT(data), "id");
-		gchar* live = g_object_get_data(G_OBJECT(data), "live");
-		gchar* url = get_channel_url_by_id((gchar*) id, live ? 1 : 0);
-		if (url != NULL) {
-			g_bRadioStatus = TRUE;
-			current = (gchar*) id;
-			gstPlay(url);
-			g_free(url);
-		}
-		g_thread_exit(NULL);
+    gchar* id = g_object_get_data(G_OBJECT(data), "id");
+    gchar* live = g_object_get_data(G_OBJECT(data), "live");
+    gchar* url = get_channel_url_by_id((gchar*) id, live ? 1 : 0);
+    if (url != NULL) {
+        g_bRadioStatus = TRUE;
+        current = (gchar*) id;
+        gstPlayer->Play(gstPlayer, url);
+        g_free(url);
+    }
+    g_thread_exit(NULL);
 }
 
 void onMenu(GtkWidget* item, gpointer user_data)
 {
-	if (GTK_CHECK_MENU_ITEM(item)->active)
-		g_thread_create((GThreadFunc) onPlay, item, FALSE, NULL);
+    if (GTK_CHECK_MENU_ITEM(item)->active)
+        g_thread_create((GThreadFunc) onPlay, item, FALSE, NULL);
 }
 
 GSList* appendMenu(const char *name, GtkWidget* menu, GSList *group, char **site_list, gboolean bLive)
 {
-	GtkWidget *label = NULL;
-	GtkWidget *sub_menu = NULL;
-	GtkWidget *menu_item = NULL;
+    GtkWidget *label = NULL;
+    GtkWidget *sub_menu = NULL;
+    GtkWidget *menu_item = NULL;
 
-	label = gtk_menu_item_new_with_label(name);
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), label);
-	sub_menu = gtk_menu_new();
-	gtk_menu_item_set_submenu(GTK_MENU_ITEM(label), sub_menu);
+    label = gtk_menu_item_new_with_label(name);
+    gtk_menu_shell_append(GTK_MENU_SHELL(menu), label);
+    sub_menu = gtk_menu_new();
+    gtk_menu_item_set_submenu(GTK_MENU_ITEM(label), sub_menu);
 
-	do {
-		menu_item = gtk_radio_menu_item_new_with_label(group, *site_list);
-		group = gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(menu_item));
-		g_object_set_data(G_OBJECT(menu_item), "id", *(site_list + 1));
-		g_object_set_data(G_OBJECT(menu_item), "live", bLive ? *(site_list + 1) : NULL);
-		g_signal_connect(G_OBJECT(menu_item), "toggled", G_CALLBACK(onMenu), NULL);
-		gtk_menu_shell_append(GTK_MENU_SHELL(sub_menu), menu_item);
-	} while (*(site_list += 2));
+    do {
+        menu_item = gtk_radio_menu_item_new_with_label(group, *site_list);
+        group = gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(menu_item));
+        g_object_set_data(G_OBJECT(menu_item), "id", *(site_list + 1));
+        g_object_set_data(G_OBJECT(menu_item), "live", bLive ? *(site_list + 1) : NULL);
+        g_signal_connect(G_OBJECT(menu_item), "toggled", G_CALLBACK(onMenu), NULL);
+        gtk_menu_shell_append(GTK_MENU_SHELL(sub_menu), menu_item);
+    } while (*(site_list += 2));
 
-	return group;
+    return group;
 }
 
 gboolean onEggTrayEvent(GtkWidget* widget, GdkEventButton* evt, gpointer user_data)
 {
-	if (widget != NULL) {
-		gtk_menu_popup(GTK_MENU(user_data), NULL, NULL, NULL, NULL, evt->button, evt->time);
-		return TRUE;
-	}
-	return FALSE;
+    if (widget != NULL) {
+        gtk_menu_popup(GTK_MENU(user_data), NULL, NULL, NULL, NULL, evt->button, evt->time);
+        return TRUE;
+    }
+    return FALSE;
 }
 
 int main(int argc, char *argv[])
 {
-	GtkWidget *icon = NULL;
-	GtkWidget *evt_box = NULL;
-	GtkTooltips *tooltips = NULL;
-	EggTrayIcon *tray_icon = NULL;
-	GtkWidget* menu = NULL;
-	GSList* group = NULL;
-	GtkWidget* menu_item = NULL;
-	radio_icon_t t_RadioIcon = {NULL, NULL, NULL};
+    GtkWidget *icon = NULL;
+    GtkWidget *evt_box = NULL;
+    GtkTooltips *tooltips = NULL;
+    EggTrayIcon *tray_icon = NULL;
+    GtkWidget* menu = NULL;
+    GSList* group = NULL;
+    GtkWidget* menu_item = NULL;
+    radio_icon_t t_RadioIcon = {NULL, NULL, NULL};
 
-	g_thread_init(NULL);
-	gtk_init(&argc, &argv);
-	
-	tooltips = gtk_tooltips_new();
-	tray_icon = egg_tray_icon_new("Beta Radio");
-	evt_box = gtk_event_box_new();
-	gtk_container_add(GTK_CONTAINER(tray_icon), evt_box);
+    g_thread_init(NULL);
+    gtk_init(&argc, &argv);
 
-	menu = gtk_menu_new();
+    gstPlayer = gstCreate();
+    gstPlayer->Register(gstPlayer, myGstCallback);
 
-	menu_item = gtk_radio_menu_item_new_with_label(group, "停止播放");
-	group = gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(menu_item));
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), menu_item);
-	g_signal_connect(G_OBJECT(menu_item), "toggled", G_CALLBACK(onStop), NULL);
+    tooltips = gtk_tooltips_new();
+    tray_icon = egg_tray_icon_new("Beta Radio");
+    evt_box = gtk_event_box_new();
+    gtk_container_add(GTK_CONTAINER(tray_icon), evt_box);
 
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), gtk_separator_menu_item_new());
+    menu = gtk_menu_new();
 
-	group = appendMenu("音樂", menu, group, music_site_list, 0);
-	group = appendMenu("生活資訊", menu, group, life_site_list, 0);
-	group = appendMenu("新聞", menu, group, news_site_list, 0);
-	group = appendMenu("綜合", menu, group, others_site_list, 0);
-	group = appendMenu("外語", menu, group, foreign_site_list, 0);
-	group = appendMenu("多元文化", menu, group, culture_site_list, 0);
-	group = appendMenu("交通", menu, group, traffic_site_list, 0);
-	group = appendMenu("免費影視", menu, group, live_site_list, 1);
+    menu_item = gtk_radio_menu_item_new_with_label(group, "停止播放");
+    group = gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(menu_item));
+    gtk_menu_shell_append(GTK_MENU_SHELL(menu), menu_item);
+    g_signal_connect(G_OBJECT(menu_item), "toggled", G_CALLBACK(onStop), NULL);
 
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), gtk_separator_menu_item_new());
+    gtk_menu_shell_append(GTK_MENU_SHELL(menu), gtk_separator_menu_item_new());
 
-	menu_item = gtk_image_menu_item_new_from_stock(GTK_STOCK_QUIT, NULL);
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), menu_item);
-	g_signal_connect(G_OBJECT(menu_item), "activate", G_CALLBACK(onQuit), NULL);
+    group = appendMenu("音樂", menu, group, music_site_list, 0);
+    group = appendMenu("生活資訊", menu, group, life_site_list, 0);
+    group = appendMenu("新聞", menu, group, news_site_list, 0);
+    group = appendMenu("綜合", menu, group, others_site_list, 0);
+    group = appendMenu("外語", menu, group, foreign_site_list, 0);
+    group = appendMenu("多元文化", menu, group, culture_site_list, 0);
+    group = appendMenu("交通", menu, group, traffic_site_list, 0);
+    group = appendMenu("免費影視", menu, group, live_site_list, 1);
 
-	gtk_widget_show_all(GTK_WIDGET(menu));
+    gtk_menu_shell_append(GTK_MENU_SHELL(menu), gtk_separator_menu_item_new());
 
-	g_signal_connect(G_OBJECT(evt_box), "button-press-event", G_CALLBACK(onEggTrayEvent), menu);
+    menu_item = gtk_image_menu_item_new_from_stock(GTK_STOCK_QUIT, NULL);
+    gtk_menu_shell_append(GTK_MENU_SHELL(menu), menu_item);
+    g_signal_connect(G_OBJECT(menu_item), "activate", G_CALLBACK(onQuit), NULL);
 
-	gtk_tooltips_set_tip(GTK_TOOLTIPS(tooltips), evt_box, "BetaRadio 點播器", NULL);
+    gtk_widget_show_all(GTK_WIDGET(menu));
 
-	t_RadioIcon.m_pcRadioOn = g_build_filename(DATADIR, "pixmaps", "betaradio", "radio-on.png", NULL);
-	t_RadioIcon.m_pcRadioOff = g_build_filename(DATADIR, "pixmaps", "betaradio", "radio-off.png", NULL);
+    g_signal_connect(G_OBJECT(evt_box), "button-press-event", G_CALLBACK(onEggTrayEvent), menu);
 
-	t_RadioIcon.m_pIcon = gtk_image_new_from_file(t_RadioIcon.m_pcRadioOff);
-	gtk_container_add(GTK_CONTAINER(evt_box), t_RadioIcon.m_pIcon);
+    gtk_tooltips_set_tip(GTK_TOOLTIPS(tooltips), evt_box, "BetaRadio 點播器", NULL);
 
-	g_timeout_add(500, updateRadioStatus, &t_RadioIcon);
+    t_RadioIcon.m_pcRadioOn = g_build_filename(DATADIR, "pixmaps", "betaradio", "radio-on.png", NULL);
+    t_RadioIcon.m_pcRadioOff = g_build_filename(DATADIR, "pixmaps", "betaradio", "radio-off.png", NULL);
 
-	gtk_widget_show_all(GTK_WIDGET(tray_icon));
-	gtk_main();
-	
-	return 0;
+    t_RadioIcon.m_pIcon = gtk_image_new_from_file(t_RadioIcon.m_pcRadioOff);
+    gtk_container_add(GTK_CONTAINER(evt_box), t_RadioIcon.m_pIcon);
+
+    g_timeout_add(500, updateRadioStatus, &t_RadioIcon);
+
+    gtk_widget_show_all(GTK_WIDGET(tray_icon));
+    gtk_main();
+
+    return 0;
 }
